@startuml

class Song {
    - songName: string
    - artist: string
    - higherBPM: int
    - lowerBPM: int
    - id: int  <<PK>>
    - runtime: int // runtime is in seconds
    - licensed: bool
    - changingBPM: bool
    - game: string
}

class Chart {
    - id: int  <<PK>>
    - difficultyRating: int
    - notes: int
    - freezeNotes: int
    - shockNotes: int
    - difficultyClassification: string
}

class User {
    - id: int  <<PK>>
    - name: string
    - email: string
    - password: string
    - role: string
}

class FavoritesList {
    - id: int  <<PK>>
}

User "1" --o "each" FavoritesList : has
FavoritesList "many" --o "each" Song: has
Song "many" --o "each" Chart : has

@enduml